KTOR-9281 Read lambda argument bodies for code inference
