# ktor-compiler-plugin/testData/openapi/RouteFunctions.expected.json
@@ -180,6 +180,18 @@
                     }
                 }
             }
+        },
+        "/api/summary": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "text/plain": {}
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
